--- a/braun/index.html
+++ b/braun/index.html
@@ -16,13 +16,13 @@
             </div>
         </div>
     </header>
-    <div class="menu">
+    <nav class="menu">
         <ul class="menu__list">
             <li class="menu__item js-menu-item"><a href="#beard-shaves" class="menu__link js-scroll-link">Электробритвы для бороды</a></li>
             <li class="menu__item js-menu-item"><a href="#universal-trimmers" class="menu__link js-scroll-link">Универсальные триммеры</a></li>
             <li class="menu__item js-menu-item"><a href="#beard-trimmers" class="menu__link js-scroll-link">Триммеры для бороды</a></li>
         </ul>
-    </div>
+    </nav>
     <main class="main">
         <section class="banner banner_first">
             <picture class="banner__bg">
