--- a/dentko/service.html
+++ b/dentko/service.html
@@ -368,7 +368,7 @@
         <section class="banner uk-background-cover" style="background-image: url(./img/banner_bg.jpg);">
             <div class="uk-container uk-height-large uk-position-relative">
                 <div class="slider__body uk-position-center-left mw_no">
-                    <span class="uk-h1">Лечение зубов (кариеса)</h1>
+                    <h1>Лечение зубов (кариеса)</h1>
                     <p class="uk-text-large mw_550">По информации Белстата, 68% людей сталкиваются с кариесом еще в детском возрасте, а 97% взрослых имеют опыт лечения зубов. Очевидно, что без помощи квалифицированного стоматолога никому не обойтись. Частная клиника «Дентко» в Минске предлагает полный комплекс услуг по лечению зубов у детей и взрослых. К нам вы можете обратиться за помощью в любой ситуации. Мы же сделаем все, чтобы сохранить зубы, восстановить их эстетику и избавить вас от боли.</p>
                     <div class="uk-flex banner__buttons">
                         <button class="uk-button uk-button-default button popup-request-open">Записаться на прием<img src="./img/inline-arrow-w.svg"></button>
@@ -529,7 +529,7 @@
                         <div class="uk-card-body">
                             <span class="action__header">Акция</span>
                             <div class="uk-flex uk-flex-between action__body">
-                                <span class="action__title">На проф гигиену полости рта скидка</span>
+                                <h3 class="action__title">На проф гигиену полости рта скидка</h3>
                                 <span class="action__percentage">30%</span>
                             </div>
                         </div>
@@ -626,7 +626,9 @@
                                     <div class="review__head uk-flex uk-flex-between uk-flex-middle">
                                         <div class="review__info">
                                             <span class="review__name">Виктория</span>
-                                            <img src="./img/rating.png" alt="Рейтинг" class="review__rating">
+                                            <span class="review__rating review__rating_5">
+                                                <span class="review__stars"></span>
+                                            </span>
                                         </div>
                                         <div class="review__body">
                                             <p class="uk-text">Отличная клиника! Теперь буду ходить только сюда, наконец-то я нашла "свою" стоматологию. Цены здесь средние, а качество оборудования, материалов и само отношение персонала на высоте!</p>
@@ -653,7 +655,9 @@
                                     <div class="review__head uk-flex uk-flex-between uk-flex-middle">
                                         <div class="review__info">
                                             <span class="review__name">Виктория</span>
-                                            <img src="./img/rating.png" alt="Рейтинг" class="review__rating">
+                                            <span class="review__rating review__rating_5">
+                                                <span class="review__stars"></span>
+                                            </span>
                                         </div>
                                         <div class="review__body">
                                             <p class="uk-text">Отличная клиника! Теперь буду ходить только сюда, наконец-то я нашла "свою" стоматологию. Цены здесь средние, а качество оборудования, материалов и само отношение персонала на высоте!</p>
@@ -680,7 +684,9 @@
                                     <div class="review__head uk-flex uk-flex-between uk-flex-middle">
                                         <div class="review__info">
                                             <span class="review__name">Виктория</span>
-                                            <img src="./img/rating.png" alt="Рейтинг" class="review__rating">
+                                            <span class="review__rating review__rating_5">
+                                                <span class="review__stars"></span>
+                                            </span>
                                         </div>
                                         <div class="review__body">
                                             <p class="uk-text">Отличная клиника! Теперь буду ходить только сюда, наконец-то я нашла "свою" стоматологию. Цены здесь средние, а качество оборудования, материалов и само отношение персонала на высоте!</p>
@@ -707,7 +713,9 @@
                                     <div class="review__head uk-flex uk-flex-between uk-flex-middle">
                                         <div class="review__info">
                                             <span class="review__name">Виктория</span>
-                                            <img src="./img/rating.png" alt="Рейтинг" class="review__rating">
+                                            <span class="review__rating review__rating_5">
+                                                <span class="review__stars"></span>
+                                            </span>
                                         </div>
                                         <div class="review__body">
                                             <p class="uk-text">Отличная клиника! Теперь буду ходить только сюда, наконец-то я нашла "свою" стоматологию. Цены здесь средние, а качество оборудования, материалов и само отношение персонала на высоте!</p>
@@ -734,7 +742,9 @@
                                     <div class="review__head uk-flex uk-flex-between uk-flex-middle">
                                         <div class="review__info">
                                             <span class="review__name">Виктория</span>
-                                            <img src="./img/rating.png" alt="Рейтинг" class="review__rating">
+                                            <span class="review__rating review__rating_5">
+                                                <span class="review__stars"></span>
+                                            </span>
                                         </div>
                                         <div class="review__body">
                                             <p class="uk-text">Отличная клиника! Теперь буду ходить только сюда, наконец-то я нашла "свою" стоматологию. Цены здесь средние, а качество оборудования, материалов и само отношение персонала на высоте!</p>
@@ -1149,6 +1159,6 @@
             </div>
         </div>
     </div>
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js" defer></script>
 </body>
 </html>
