--- a/citadel/index.html
+++ b/citadel/index.html
@@ -13,18 +13,18 @@
         <div class="container container_large">
             <div class="header__wrap">
                 <div class="logo">
-                    <img src="./img/logo.png" alt="Логотип">
+                    <img class="logo__img" src="./img/logo.png" alt="Логотип">
                 </div>
                 <nav class="nav">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" class="nav__link js-scroll-link active" data-page="1">Цитадель</a>
+                            <a href="#about" class="nav__link js-scroll-link active" data-page="1">Цитадель</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link js-scroll-link" data-page="2">Активы</a>
+                            <a href="#portfolio" class="nav__link js-scroll-link" data-page="2">Активы</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link js-scroll-link" data-page="3">Контакты</a>
+                            <a href="#contacts" class="nav__link js-scroll-link" data-page="3">Контакты</a>
                         </li>
                     </ul>
                 </nav>
@@ -38,12 +38,38 @@
                         <span class="language__text">eng</span>
                     </label>
                 </div>
+                <button class="burger js-burger"><span></span></button>
             </div>
         </div>
     </header>
+    <div class="menu js-menu">
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a href="#about" class="nav__link js-scroll-link active" data-page="1">Цитадель</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#portfolio" class="nav__link js-scroll-link" data-page="2">Активы</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#contacts" class="nav__link js-scroll-link" data-page="3">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="language">
+            <label class="language__item">
+                <input class="language__radio js-language-radio" type="radio" name="language" value="rus" checked>
+                <span class="language__text">rus</span>
+            </label>
+            <label class="language__item">
+                <input class="language__radio js-language-radio" type="radio" name="language" value="eng">
+                <span class="language__text">eng</span>
+            </label>
+        </div>
+    </div>
     <main class="main js-main-swiper">
         <div class="swiper-wrapper">
-            <section class="about swiper-slide">
+            <section id="about" class="about swiper-slide">
                 <div class="container container_small">
                     <h1 class="section__title about__title">Инвестиционно-управляющая компания «Цитадель»</h1>
                     <p class="about__text">Инвестиционно-управляющая группа «Цитадель» объединяет ведущие компании в области разработки решений для обеспечения информационной безопасности и реализации требований СпОС.</p>
@@ -51,9 +77,9 @@
                     <p class="about__text">Опыт реализации крупных проектов для государственных и коммерческих компаний позволяет участвовать в формировании ключевых направлений развития ИТ-отраслей в соответствии с государственными инициативами. Синергия технического потенциала группы компаний дает основу для постоянного расширения экспертизы.</p>
                 </div>
             </section>
-            <div class="portfolio swiper-slide">
+            <div id="portfolio" class="portfolio swiper-slide">
                 <div class="container container_medium">
-                    <div class="portfolio__wrapper">
+                    <div class="portfolio__wrapper js-projects">
                         <a href="#" class="project">
                             <div class="project__logo"></div>
                             <div class="project__body">
@@ -103,20 +129,23 @@
                             </div>
                         </a>
                     </div>
+                    <button class="button portfolio__button js-projects-button">Показать все проекты</button>
                 </div>
             </div>
-            <section class="contacts swiper-slide">
+            <section id="contacts" class="contacts swiper-slide">
                 <div class="container container_big">
                     <div class="contacts__wrap">
                         <div class="contacts__content">
                             <h2 class="section__title">Напишите нам</h2>
                             <span class="about__text">Задайте вопрос через форму и мы свяжемся с вами в течение дня</span>
                             <form class="form js-contact-form">
-                                <input type="text" class="form__input" placeholder="Ваше имя">
-                                <input type="email" class="form__input" placeholder="e-mail">
-                                <input type="tel" class="form__input" placeholder="Телефон">
-                                <input type="text" class="form__input" placeholder="Компания">
-                                <textarea class="form__textarea" rows="3" placeholder="Ваши пожелания"></textarea>
+                                <div class="form__fields">
+                                    <input type="text" class="form__input" placeholder="Ваше имя">
+                                    <input type="email" class="form__input" placeholder="e-mail">
+                                    <input type="tel" class="form__input" placeholder="Телефон">
+                                    <input type="text" class="form__input" placeholder="Компания">
+                                    <textarea class="form__textarea" rows="3" placeholder="Ваши пожелания"></textarea>
+                                </div>
                                 <label class="form__label">
                                     <input class="form__checkbox" type="checkbox" name="agreement">
                                     <span class="form__fake"></span>
@@ -126,7 +155,7 @@
                             </form>
                         </div>
                         <div class="contacts__map">
-    
+                            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A17e0a35376584c534891e4a86ad56c338e7c39cdb86ee02730978682c06889e0&amp;source=constructor" width="100%" height="586" frameborder="0"></iframe>
                         </div>
                     </div>
                 </div>
