--- a/citadel/index.html
+++ b/citadel/index.html
@@ -133,7 +133,7 @@
                             </form>
                         </div>
                         <div class="contacts__map">
-                            <iframe src="https://www.google.com/maps/d/embed?mid=1Lwy-2-1F1MNeHtJE3mz1H576T8474-w0" width="640" height="480"></iframe>
+                            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A712257c482bf515d806a3805f923ea1e2dc9b24a70dea6e8c30615e0db743327&amp;source=constructor" width="100%" height="529" frameborder="0"></iframe>
                         </div>
                     </div>
                 </div>
