--- a/citadel/index.html
+++ b/citadel/index.html
@@ -103,7 +103,7 @@
                         <a href="#" class="project">
                             <div class="project__logo"></div>
                             <div class="project__body">
-                                <h2 class="project__name">Производство и поставка тех.оборудования</h2>
+                                <h2 class="project__name">Информационная безопасность</h2>
                             </div>
                         </a>
                     </div>
@@ -129,7 +129,7 @@
                                     <span class="form__fake"></span>
                                     <span class="form__label-text">Нажимая кнопку "Отправить" я соглашаюсь с <button type="button" class="form__label-link js-policy-trigger">Политикой обработки персональных данных</button></span>
                                 </label>
-                                <button type="button" class="button form__button js-form-trigger">отправить</button>
+                                <button type="submit" class="button form__button">отправить</button>
                             </form>
                         </div>
                         <div class="contacts__map">
