--- a/citadel/index.html
+++ b/citadel/index.html
@@ -13,7 +13,7 @@
         <div class="container container_large">
             <div class="header__wrap">
                 <div class="logo">
-                    <img class="logo__img" src="./img/logo.png" alt="Логотип">
+                    <img class="logo__img" src="./img/logo.svg" alt="Логотип">
                 </div>
                 <nav class="nav">
                     <ul class="nav__list">
