--- a/citadel/index.html
+++ b/citadel/index.html
@@ -59,49 +59,73 @@
                 <div class="container container_medium">
                     <div class="portfolio__wrapper js-projects">
                         <a href="#" class="project">
-                            <div class="project__logo"></div>
+                            <div class="project__logo">
+                                <img src="./img/partner_1-g.svg" alt="" class="project__logo-grey">
+                                <img src="./img/partner_1.svg" alt="" class="project__logo-colored">
+                            </div>
                             <div class="project__body">
                                 <h2 class="project__name">СпОС 2<br>СпОС 3</h2>
                             </div>
                         </a>
                         <a href="#" class="project">
-                            <div class="project__logo"></div>
+                            <div class="project__logo">
+                                <img src="./img/partner_2-g.svg" alt="" class="project__logo-grey">
+                                <img src="./img/partner_2.svg" alt="" class="project__logo-colored">
+                            </div>
                             <div class="project__body">
                                 <h2 class="project__name">СпОС 1<br>СпОС IMS</h2>
                             </div>
                         </a>
                         <a href="#" class="project">
-                            <div class="project__logo"></div>
+                            <div class="project__logo">
+                                <img src="./img/partner_3-g.svg" alt="" class="project__logo-grey">
+                                <img src="./img/partner_3.svg" alt="" class="project__logo-colored">
+                            </div>
                             <div class="project__body">
                                 <h2 class="project__name">СпОС 2<br>СпОС MVNO</h2>
                             </div>
                         </a>
                         <a href="#" class="project">
-                            <div class="project__logo"></div>
+                            <div class="project__logo">
+                                <img src="./img/partner_4-g.svg" alt="" class="project__logo-grey">
+                                <img src="./img/partner_4.svg" alt="" class="project__logo-colored">
+                            </div>
                             <div class="project__body">
                                 <h2 class="project__name">Информационная безопасность</h2>
                             </div>
                         </a>
                         <a href="#" class="project">
-                            <div class="project__logo"></div>
+                            <div class="project__logo">
+                                <img src="./img/partner_5-g.svg" alt="" class="project__logo-grey">
+                                <img src="./img/partner_5.svg" alt="" class="project__logo-colored">
+                            </div>
                             <div class="project__body">
                                 <h2 class="project__name">СпОС 2<br>СпОС 3</h2>
                             </div>
                         </a>
                         <a href="#" class="project">
-                            <div class="project__logo"></div>
+                            <div class="project__logo">
+                                <img src="./img/partner_6-g.svg" alt="" class="project__logo-grey">
+                                <img src="./img/partner_6.svg" alt="" class="project__logo-colored">
+                            </div>
                             <div class="project__body">
                                 <h2 class="project__name">Комплексы ЦКП СОРД<br>Имитаторы ПУ СпОС</h2>
                             </div>
                         </a>
                         <a href="#" class="project">
-                            <div class="project__logo"></div>
+                            <div class="project__logo">
+                                <img src="./img/partner_7-g.svg" alt="" class="project__logo-grey">
+                                <img src="./img/partner_7.svg" alt="" class="project__logo-colored">
+                            </div>
                             <div class="project__body">
                                 <h2 class="project__name">Система анализа трафика/DPI</h2>
                             </div>
                         </a>
                         <a href="#" class="project">
-                            <div class="project__logo"></div>
+                            <div class="project__logo">
+                                <img src="./img/partner_8-g.svg" alt="" class="project__logo-grey">
+                                <img src="./img/partner_8.svg" alt="" class="project__logo-colored">
+                            </div>
                             <div class="project__body">
                                 <h2 class="project__name">Информационная безопасность</h2>
                             </div>
