--- a/pool-spa/index.html
+++ b/pool-spa/index.html
@@ -113,7 +113,7 @@
                         <source srcset="./img/hero-item.webp" type="image/webp">
                         <img src="./img/hero-item.jpg" alt="Фото в слайдере">
                     </picture>
-                    <div class="container">
+                    <div class="container container_slide">
                         <div class="slide__body">
                             <div class="slide__content">
                                 <h2 class="slide__title">Акция! Новое поступление Итальянского оборудования</h2>
@@ -121,24 +121,46 @@
                             </div>
                         </div>
                     </div>
-                    <button class="button slide__control slide__control_prev">
-                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                            viewBox="0 0 443.52 443.52" style="fill: white;" xml:space="preserve">
-                            <path d="M143.492,221.863L336.226,29.129c6.663-6.664,6.663-17.468,0-24.132c-6.665-6.662-17.468-6.662-24.132,0l-204.8,204.8
-                                        c-6.662,6.664-6.662,17.468,0,24.132l204.8,204.8c6.78,6.548,17.584,6.36,24.132-0.42c6.387-6.614,6.387-17.099,0-23.712
-                                        L143.492,221.863z"/>
-                        </svg>
-                    </button>
-                    <button class="button slide__control slide__control_next">
-                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                            viewBox="0 0 443.52 443.52" style="fill: white;" xml:space="preserve">
-                            <path d="M143.492,221.863L336.226,29.129c6.663-6.664,6.663-17.468,0-24.132c-6.665-6.662-17.468-6.662-24.132,0l-204.8,204.8
-                                        c-6.662,6.664-6.662,17.468,0,24.132l204.8,204.8c6.78,6.548,17.584,6.36,24.132-0.42c6.387-6.614,6.387-17.099,0-23.712
-                                        L143.492,221.863z"/>
-                        </svg>
-                    </button>
+                </div>
+                <div class="swiper-slide hero__slide slide">
+                    <picture class="slide__img">
+                        <source srcset="./img/hero-item.webp" type="image/webp">
+                        <img src="./img/hero-item.jpg" alt="Фото в слайдере">
+                    </picture>
+                    <div class="container container_slide">
+                        <div class="slide__body">
+                            <div class="slide__content">
+                                <h2 class="slide__title">Акция! Новое поступление Итальянского оборудования</h2>
+                                <a href="#" class="slide__link">Подробнее</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide hero__slide slide">
+                    <picture class="slide__img">
+                        <source srcset="./img/hero-item.webp" type="image/webp">
+                        <img src="./img/hero-item.jpg" alt="Фото в слайдере">
+                    </picture>
+                    <div class="container container_slide">
+                        <div class="slide__body">
+                            <div class="slide__content">
+                                <h2 class="slide__title">Акция! Новое поступление Итальянского оборудования</h2>
+                                <a href="#" class="slide__link">Подробнее</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <button class="button slide__control slide__control_prev">
+                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 443.52 443.52" style="fill: white;" xml:space="preserve">
+                    <path d="M143.492,221.863L336.226,29.129c6.663-6.664,6.663-17.468,0-24.132c-6.665-6.662-17.468-6.662-24.132,0l-204.8,204.8 c-6.662,6.664-6.662,17.468,0,24.132l204.8,204.8c6.78,6.548,17.584,6.36,24.132-0.42c6.387-6.614,6.387-17.099,0-23.712 L143.492,221.863z"/>
+                </svg>
+            </button>
+            <button class="button slide__control slide__control_next">
+                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 443.52 443.52" style="fill: white;" xml:space="preserve">
+                    <path d="M143.492,221.863L336.226,29.129c6.663-6.664,6.663-17.468,0-24.132c-6.665-6.662-17.468-6.662-24.132,0l-204.8,204.8 c-6.662,6.664-6.662,17.468,0,24.132l204.8,204.8c6.78,6.548,17.584,6.36,24.132-0.42c6.387-6.614,6.387-17.099,0-23.712 L143.492,221.863z"/>
+                </svg>
+            </button>
         </section>
         <div class="sales section_grey">
             <div class="container">
