--- a/zillion/about.html
+++ b/zillion/about.html
@@ -16,8 +16,24 @@
                 </a>
                 <nav class="nav">
                     <ul class="nav__list">
+                        <li class="nav__item"><a href="./games.html" class="nav__link text_bold active">games</a></li>
+                        <li class="nav__item"><a href="./about.html" class="nav__link text_bold">about</a></li>
+                        <li class="nav__item"><a href="./news.html" class="nav__link text_bold">news</a></li>
+                        <li class="nav__item"><a href="./contacts.html" class="nav__link text_bold">contacts</a></li>
+                    </ul>
+                </nav>
+                <button class="button button_request text_bold js-open-request">integration request</button>
+                <button class="button burger js-burger">
+                    <span></span>
+                </button>
+            </div>
+        </div>
+        <div class="menu js-menu">
+            <div class="menu__container">
+                <nav class="nav">
+                    <ul class="nav__list">
                         <li class="nav__item"><a href="./games.html" class="nav__link text_bold">games</a></li>
-                        <li class="nav__item"><a href="./about.html" class="nav__link text_bold active">about</a></li>
+                        <li class="nav__item"><a href="./about.html" class="nav__link text_bold">about</a></li>
                         <li class="nav__item"><a href="./news.html" class="nav__link text_bold">news</a></li>
                         <li class="nav__item"><a href="./contacts.html" class="nav__link text_bold">contacts</a></li>
                     </ul>
@@ -30,13 +46,13 @@
         <section class="about-page">
             <div class="container">
                 <div class="about-page__top">
-                    <picture class="about-page__img about-page__img_float">
+                    <picture class="about-page__img about-page__img_float js-about-img">
                         <source srcset="./img/about_1.webp" type="type/webp">
                         <img src="./img/about_1.jpg" alt="Картинка">
                     </picture>
-                    <h1 class="section__title section__title_dib section__title_big">About</h1>
+                    <h1 class="section__title section__title_dib section__title_big">About us</h1>
                     <p class="about-page__text about-page__text_medium">Zillion games is an up and coming game developer company whose goal is to provide modern gambling solutions for our partners</p>
-                    <p class="about-page__text about-page__text_small">Our team of experienced specialists works everyday on the fast growing portfolio of progressive and renovational casino titles which are now available for slots enjoyers.</p>
+                    <p class="about-page__text about-page__text_small js-about-mobile-target">Our team of experienced specialists works everyday on the fast growing portfolio of progressive and renovational casino titles which are now available for slots enjoyers.</p>
                     <p class="about-page__text about-page__text_small">Brand new for the industry mechanics are companioned with fresh and pleasant design so the highest level of satisfaction and involvement could be achieved. Its hard not to feature our high-end customer support services where you can find our team always willing to answer any kind of a question in no time. Also, what we can be proud of are great conditions for our partners.</p>
                 </div>
                 <div class="about-page__bottom">
