--- a/zillion/index.html
+++ b/zillion/index.html
@@ -16,6 +16,22 @@
                 </a>
                 <nav class="nav">
                     <ul class="nav__list">
+                        <li class="nav__item"><a href="./games.html" class="nav__link text_bold active">games</a></li>
+                        <li class="nav__item"><a href="./about.html" class="nav__link text_bold">about</a></li>
+                        <li class="nav__item"><a href="./news.html" class="nav__link text_bold">news</a></li>
+                        <li class="nav__item"><a href="./contacts.html" class="nav__link text_bold">contacts</a></li>
+                    </ul>
+                </nav>
+                <button class="button button_request text_bold js-open-request">integration request</button>
+                <button class="button burger js-burger">
+                    <span></span>
+                </button>
+            </div>
+        </div>
+        <div class="menu js-menu">
+            <div class="menu__container">
+                <nav class="nav">
+                    <ul class="nav__list">
                         <li class="nav__item"><a href="./games.html" class="nav__link text_bold">games</a></li>
                         <li class="nav__item"><a href="./about.html" class="nav__link text_bold">about</a></li>
                         <li class="nav__item"><a href="./news.html" class="nav__link text_bold">news</a></li>
