--- a/zillion/index.html
+++ b/zillion/index.html
@@ -45,18 +45,23 @@
     <main class="main main_index">
         <section class="slide js-slider" data-page="1" data-pages="5">
             <picture class="slide__bg js-slider-changable active" data-slide="1">
+                <source srcset="./img/slider_bg-1.webp" type="image/webp">
                 <img src="./img/slider_bg-1.png" alt="Фон слайдера">
             </picture>
             <picture class="slide__bg js-slider-changable" data-slide="2">
+                <source srcset="./img/slider_bg-2.webp" type="image/webp">
                 <img src="./img/slider_bg-2.png" alt="Фон слайдера">
             </picture>
             <picture class="slide__bg js-slider-changable" data-slide="3">
+                <source srcset="./img/slider_bg-3.webp" type="image/webp">
                 <img src="./img/slider_bg-3.png" alt="Фон слайдера">
             </picture>
             <picture class="slide__bg js-slider-changable" data-slide="4">
+                <source srcset="./img/slider_bg-4.webp" type="image/webp">
                 <img src="./img/slider_bg-4.png" alt="Фон слайдера">
             </picture>
             <picture class="slide__bg js-slider-changable" data-slide="5">
+                <source srcset="./img/slider_bg-5.webp" type="image/webp">
                 <img src="./img/slider_bg-5.png" alt="Фон слайдера">
             </picture>
             <div class="container">
@@ -92,56 +97,71 @@
                 <div class="slide__images">
                     <div class="slide__image js-slider-changable active" data-slide="1">
                         <picture class="slide__image-bg">
+                            <source srcset="./img/slider_image-bg-1.webp" type="image/webp">
                             <img src="./img/slider_image-bg-1.png" alt="Фон изображения в слайдере">
                         </picture>
                         <picture class="slide__image-mobile">
+                            <source srcset="./img/slider_image-mobile-1.webp" type="image/webp">
                             <img src="./img/slider_image-mobile-1.png" alt="Фон изображения в слайдере">
                         </picture>
                         <picture class="slide__image-item">
+                            <source srcset="./img/slider_image-item-1.webp" type="image/webp">
                             <img src="./img/slider_image-item-1.png" alt="Изображение в слайдере">
                         </picture>
                     </div>
                     <div class="slide__image js-slider-changable" data-slide="2">
                         <picture class="slide__image-bg">
+                            <source srcset="./img/slider_image-bg-2.webp" type="image/webp">
                             <img src="./img/slider_image-bg-2.png" alt="Фон изображения в слайдере">
                         </picture>
                         <picture class="slide__image-mobile">
+                            <source srcset="./img/slider_image-mobile-2.webp" type="image/webp">
                             <img src="./img/slider_image-mobile-2.png" alt="Фон изображения в слайдере">
                         </picture>
                         <picture class="slide__image-item">
+                            <source srcset="./img/slider_image-item-2.webp" type="image/webp">
                             <img src="./img/slider_image-item-2.png" alt="Изображение в слайдере">
                         </picture>
                     </div>
                     <div class="slide__image js-slider-changable" data-slide="3">
                         <picture class="slide__image-bg">
+                            <source srcset="./img/slider_image-bg-3.webp" type="image/webp">
                             <img src="./img/slider_image-bg-3.png" alt="Фон изображения в слайдере">
                         </picture>
                         <picture class="slide__image-mobile">
+                            <source srcset="./img/slider_image-mobile-3.webp" type="image/webp">
                             <img src="./img/slider_image-mobile-3.png" alt="Фон изображения в слайдере">
                         </picture>
                         <picture class="slide__image-item">
+                            <source srcset="./img/slider_image-item-3.webp" type="image/webp">
                             <img src="./img/slider_image-item-3.png" alt="Изображение в слайдере">
                         </picture>
                     </div>
                     <div class="slide__image js-slider-changable" data-slide="4">
                         <picture class="slide__image-bg">
+                            <source srcset="./img/slider_image-bg-4.webp" type="image/webp">
                             <img src="./img/slider_image-bg-4.png" alt="Фон изображения в слайдере">
                         </picture>
                         <picture class="slide__image-mobile">
+                            <source srcset="./img/slider_image-mobile-4.webp" type="image/webp">
                             <img src="./img/slider_image-mobile-4.png" alt="Фон изображения в слайдере">
                         </picture>
                         <picture class="slide__image-item">
+                            <source srcset="./img/slider_image-item-4.webp" type="image/webp">
                             <img src="./img/slider_image-item-4.png" alt="Изображение в слайдере">
                         </picture>
                     </div>
                     <div class="slide__image js-slider-changable" data-slide="5">
                         <picture class="slide__image-bg">
+                            <source srcset="./img/slider_image-bg-5.webp" type="image/webp">
                             <img src="./img/slider_image-bg-5.png" alt="Фон изображения в слайдере">
                         </picture>
                         <picture class="slide__image-mobile">
+                            <source srcset="./img/slider_image-mobile-5.webp" type="image/webp">
                             <img src="./img/slider_image-mobile-5.png" alt="Фон изображения в слайдере">
                         </picture>
                         <picture class="slide__image-item">
+                            <source srcset="./img/slider_image-item-5.webp" type="image/webp">
                             <img src="./img/slider_image-item-5.png" alt="Изображение в слайдере">
                         </picture>
                     </div>
