--- a/zillion/games.html
+++ b/zillion/games.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <script src="./js/main.js" defer></script>
 </head>
-<body class="js-page-identifier" data-page="games">
+<body class="body_white js-page-identifier" data-page="games">
     <header class="header">
         <div class="container">
             <div class="header__wrap">
