--- a/zillion/index.html
+++ b/zillion/index.html
@@ -253,8 +253,7 @@
                             <div class="bandito__body">
                                 <div class="bandito__col">
                                     <div class="bandito__item">
-                                        <svg>
-                                            <use xlink:href="#lamp"></use>
+                                        <svg><use xlink:href="#lamp"></use>
                                         </svg>
                                     </div>
                                     <div class="bandito__item">
