--- a/platform/home-test.html
+++ b/platform/home-test.html
@@ -256,99 +256,99 @@
                 <div class="tab-pane fade show active">
                     <div class="u-timeline-v3-wrap">
                         <div class="u-timeline-v3 d-block text-center text-md-left g-parent u-link-v5 g-mb-50">
-    <div class="g-hidden-sm-down u-timeline-v3__icon g-absolute-centered--y g-z-index-3 g-line-height-0 g-width-19 g-height-19 g-ml-minus-8">
-        <i class="d-inline-block g-width-19 g-height-19 g-brd-2 g-brd-style-solid g-brd-gray-light-v4 g-rounded-50"></i>
-    </div>
+                            <div class="g-hidden-sm-down u-timeline-v3__icon g-absolute-centered--y g-z-index-3 g-line-height-0 g-width-19 g-height-19 g-ml-minus-8">
+                                <i class="d-inline-block g-width-19 g-height-19 g-brd-2 g-brd-style-solid g-brd-gray-light-v4 g-rounded-50"></i>
+                            </div>
 
-    <div class="row mx-0">
-        <div class=" col-md-6 g-order-1 g-order-1--md g-mx-auto d-flex justify-content-end align-self-center px-0">
-            <div class="scedule__time u-heading-v1-4 g-brd-gray-light-v2">
-                <span class="text-center g-pos-rel d-block g-width-140 g-line-height-1_6 g-font-weight-300 g-color-white g-font-size-20 g-py-5 g-px-10 mx-auto g-ml-0--md g-transition-0_2 g-transition--ease-in g-mb-10 g-mb-0--md">15:30 - 17:30</span>
-            </div>
-        </div>
-
-        <div class="col-md-6 g-order-1 g-order-2--sm px-0 g-mb-15 g-mb-0--md">
-            <div class="timeline media d-block d-md-flex">
-                <div class="media-body align-self-center g-pr-30 g-pl-30">
-                    <h3 class="g-font-weight-700 g-pt-15 g-pb-15 g-font-size-20 text-color-white g-mb-0">Начало трансляции</h3>
-                                </div>
-            </div>
-        </div>
-    </div>
-</div>
-                            <div class="u-timeline-v3 d-block text-center text-md-left g-parent u-link-v5 g-mb-50">
-    <div class="g-hidden-sm-down u-timeline-v3__icon g-absolute-centered--y g-z-index-3 g-line-height-0 g-width-19 g-height-19 g-ml-minus-8">
-        <i class="d-inline-block g-width-19 g-height-19 g-brd-2 g-brd-style-solid g-brd-gray-light-v4 g-rounded-50"></i>
-    </div>
-
-    <div class="row mx-0">
-        <div class=" col-md-6 g-order-1 g-order-1--md g-mx-auto d-flex justify-content-end align-self-center px-0">
-            <div class="scedule__time u-heading-v1-4 g-brd-gray-light-v2">
-                <span class="text-center g-pos-rel d-block g-width-140 g-line-height-1_6 g-font-weight-300 g-color-white g-font-size-20 g-py-5 g-px-10 mx-auto g-ml-0--md g-transition-0_2 g-transition--ease-in g-mb-10 g-mb-0--md">17:45 - 18:45</span>
-            </div>
-        </div>
-
-        <div class="col-md-6 g-order-1 g-order-2--sm px-0 g-mb-15 g-mb-0--md">
-            <div class="timeline media d-block d-md-flex">
-                <div class="media-body align-self-center g-pr-30 g-pl-30">
-                    <h3 class="g-font-weight-700 g-pt-15 g-pb-15 g-font-size-20 text-color-white g-mb-0">Приветственное слово Сергея Шилова</h3>
-                                </div>
-            </div>
-        </div>
-    </div>
-</div>
-                            <div class="u-timeline-v3 d-block text-center text-md-left g-parent u-link-v5 g-mb-50">
-    <div class="g-hidden-sm-down u-timeline-v3__icon g-absolute-centered--y g-z-index-3 g-line-height-0 g-width-19 g-height-19 g-ml-minus-8">
-        <i class="d-inline-block g-width-19 g-height-19 g-brd-2 g-brd-style-solid g-brd-gray-light-v4 g-rounded-50"></i>
-    </div>
-
-    <div class="row mx-0">
-        <div class=" col-md-6 g-order-1 g-order-1--md g-mx-auto d-flex justify-content-end align-self-center px-0">
-            <div class="scedule__time u-heading-v1-4 g-brd-gray-light-v2">
-                <span class="text-center g-pos-rel d-block g-width-140 g-line-height-1_6 g-font-weight-300 g-color-white g-font-size-20 g-py-5 g-px-10 mx-auto g-ml-0--md g-transition-0_2 g-transition--ease-in g-mb-10 g-mb-0--md">19:00 - 21:00</span>
-            </div>
-        </div>
-
-        <div class="col-md-6 g-order-1 g-order-2--sm px-0 g-mb-15 g-mb-0--md">
-            <div class="timeline media d-block d-md-flex">
-                <div class="media-body align-self-center g-pr-30 g-pl-30">
-                    <h3 class="g-font-weight-700 g-pt-15 g-pb-15 g-font-size-20 text-color-white g-mb-0">Официальная часть</h3>
-                                    <p class="border-top g-pt-15 g-pb-25 g-color-gray-dark-v5 mb-0 text-color-white">Выступление партнеров и директоров практик Блока. Ответы на вопросы. Вы сможете задать свои вопросы до и во время официальной части.</p>
+                            <div class="row mx-0">
+                                <div class=" col-md-6 g-order-1 g-order-1--md g-mx-auto d-flex justify-content-end align-self-center px-0">
+                                    <div class="scedule__time u-heading-v1-4 g-brd-gray-light-v2">
+                                        <span class="text-center g-pos-rel d-block g-width-140 g-line-height-1_6 g-font-weight-300 g-color-white g-font-size-20 g-py-5 g-px-10 mx-auto g-ml-0--md g-transition-0_2 g-transition--ease-in g-mb-10 g-mb-0--md">15:30 - 17:30</span>
                                     </div>
-            </div>
-        </div>
-    </div>
-</div>
-                            <div class="u-timeline-v3 d-block text-center text-md-left g-parent u-link-v5 g-mb-50">
-    <div class="g-hidden-sm-down u-timeline-v3__icon g-absolute-centered--y g-z-index-3 g-line-height-0 g-width-19 g-height-19 g-ml-minus-8">
-        <i class="d-inline-block g-width-19 g-height-19 g-brd-2 g-brd-style-solid g-brd-gray-light-v4 g-rounded-50"></i>
-    </div>
+                                </div>
 
-    <div class="row mx-0">
-        <div class=" col-md-6 g-order-1 g-order-1--md g-mx-auto d-flex justify-content-end align-self-center px-0">
-            <div class="scedule__time u-heading-v1-4 g-brd-gray-light-v2">
-                <span class="text-center g-pos-rel d-block g-width-140 g-line-height-1_6 g-font-weight-300 g-color-white g-font-size-20 g-py-5 g-px-10 mx-auto g-ml-0--md g-transition-0_2 g-transition--ease-in g-mb-10 g-mb-0--md">21:15 - 22:00</span>
-            </div>
-        </div>
-
-        <div class="col-md-6 g-order-1 g-order-2--sm px-0 g-mb-15 g-mb-0--md">
-            <div class="timeline media d-block d-md-flex">
-                <div class="media-body align-self-center g-pr-30 g-pl-30">
-                    <h3 class="g-font-weight-700 g-pt-15 g-pb-15 g-font-size-20 text-color-white g-mb-0">Развлекательная часть</h3>
-                                    <p class="border-top g-pt-15 g-pb-25 g-color-gray-dark-v5 mb-0 text-color-white"><span class="g-font-weight-500">Мафия Онлайн:</span> сразимся в самой увлекательной
-                        психологической игре и разыщем мафию среди
-                        мирных жителей.
-                        <br>
-                        <br>
-                        <span class="g-font-weight-500">Кикер Онлайн:</span> проведем настоящий футбольный
-                        турнир и поставим ставки на фаворитов.</p>
+                                <div class="col-md-6 g-order-1 g-order-2--sm px-0 g-mb-15 g-mb-0--md">
+                                    <div class="timeline media d-block d-md-flex">
+                                        <div class="media-body align-self-center g-pr-30 g-pl-30">
+                                            <h3 class="g-font-weight-700 g-pt-15 g-pb-15 g-font-size-20 text-color-white g-mb-0">Начало трансляции</h3>
+                                        </div>
                                     </div>
-            </div>
-        </div>
-    </div>
-</div>
-    
-</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="u-timeline-v3 d-block text-center text-md-left g-parent u-link-v5 g-mb-50">
+                            <div class="g-hidden-sm-down u-timeline-v3__icon g-absolute-centered--y g-z-index-3 g-line-height-0 g-width-19 g-height-19 g-ml-minus-8">
+                                <i class="d-inline-block g-width-19 g-height-19 g-brd-2 g-brd-style-solid g-brd-gray-light-v4 g-rounded-50"></i>
+                            </div>
+
+                            <div class="row mx-0">
+                                <div class=" col-md-6 g-order-1 g-order-1--md g-mx-auto d-flex justify-content-end align-self-center px-0">
+                                    <div class="scedule__time u-heading-v1-4 g-brd-gray-light-v2">
+                                        <span class="text-center g-pos-rel d-block g-width-140 g-line-height-1_6 g-font-weight-300 g-color-white g-font-size-20 g-py-5 g-px-10 mx-auto g-ml-0--md g-transition-0_2 g-transition--ease-in g-mb-10 g-mb-0--md">17:45 - 18:45</span>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6 g-order-1 g-order-2--sm px-0 g-mb-15 g-mb-0--md">
+                                    <div class="timeline media d-block d-md-flex">
+                                        <div class="media-body align-self-center g-pr-30 g-pl-30">
+                                            <h3 class="g-font-weight-700 g-pt-15 g-pb-15 g-font-size-20 text-color-white g-mb-0">Приветственное слово Сергея Шилова</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="u-timeline-v3 d-block text-center text-md-left g-parent u-link-v5 g-mb-50">
+                            <div class="g-hidden-sm-down u-timeline-v3__icon g-absolute-centered--y g-z-index-3 g-line-height-0 g-width-19 g-height-19 g-ml-minus-8">
+                                <i class="d-inline-block g-width-19 g-height-19 g-brd-2 g-brd-style-solid g-brd-gray-light-v4 g-rounded-50"></i>
+                            </div>
+
+                            <div class="row mx-0">
+                                <div class=" col-md-6 g-order-1 g-order-1--md g-mx-auto d-flex justify-content-end align-self-center px-0">
+                                    <div class="scedule__time u-heading-v1-4 g-brd-gray-light-v2">
+                                        <span class="text-center g-pos-rel d-block g-width-140 g-line-height-1_6 g-font-weight-300 g-color-white g-font-size-20 g-py-5 g-px-10 mx-auto g-ml-0--md g-transition-0_2 g-transition--ease-in g-mb-10 g-mb-0--md">19:00 - 21:00</span>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6 g-order-1 g-order-2--sm px-0 g-mb-15 g-mb-0--md">
+                                    <div class="timeline media d-block d-md-flex">
+                                        <div class="media-body align-self-center g-pr-30 g-pl-30">
+                                            <h3 class="g-font-weight-700 g-pt-15 g-pb-15 g-font-size-20 text-color-white g-mb-0">Официальная часть</h3>
+                                            <p class="border-top g-pt-15 g-pb-25 g-color-gray-dark-v5 mb-0 text-color-white">Выступление партнеров и директоров практик Блока. Ответы на вопросы. Вы сможете задать свои вопросы до и во время официальной части.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="u-timeline-v3 d-block text-center text-md-left g-parent u-link-v5 g-mb-50">
+                            <div class="g-hidden-sm-down u-timeline-v3__icon g-absolute-centered--y g-z-index-3 g-line-height-0 g-width-19 g-height-19 g-ml-minus-8">
+                                <i class="d-inline-block g-width-19 g-height-19 g-brd-2 g-brd-style-solid g-brd-gray-light-v4 g-rounded-50"></i>
+                            </div>
+
+                            <div class="row mx-0">
+                                <div class=" col-md-6 g-order-1 g-order-1--md g-mx-auto d-flex justify-content-end align-self-center px-0">
+                                    <div class="scedule__time u-heading-v1-4 g-brd-gray-light-v2">
+                                        <span class="text-center g-pos-rel d-block g-width-140 g-line-height-1_6 g-font-weight-300 g-color-white g-font-size-20 g-py-5 g-px-10 mx-auto g-ml-0--md g-transition-0_2 g-transition--ease-in g-mb-10 g-mb-0--md">21:15 - 22:00</span>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6 g-order-1 g-order-2--sm px-0 g-mb-15 g-mb-0--md">
+                                    <div class="timeline media d-block d-md-flex">
+                                        <div class="media-body align-self-center g-pr-30 g-pl-30">
+                                            <h3 class="g-font-weight-700 g-pt-15 g-pb-15 g-font-size-20 text-color-white g-mb-0">Развлекательная часть</h3>
+                                                <p class="border-top g-pt-15 g-pb-25 g-color-gray-dark-v5 mb-0 text-color-white"><span class="g-font-weight-500">Мафия Онлайн:</span> сразимся в самой увлекательной
+                                                    психологической игре и разыщем мафию среди
+                                                    мирных жителей.
+                                                    <br>
+                                                    <br>
+                                                    <span class="g-font-weight-500">Кикер Онлайн:</span> проведем настоящий футбольный
+                                                    турнир и поставим ставки на фаворитов.
+                                                </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- End Tab panes -->
