--- a/platform/login.html
+++ b/platform/login.html
@@ -44,7 +44,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-4 col-md-7 col-lg-4 d-flex flex-column align-items-center justify-content-center">
               <img class="g-mb-45 logo_2" src="./logo_2.png" alt="Логотип 2">
-              <div class="login d-flex flex-column align-items-center justify-content-center">
+              <form class="login d-flex flex-column align-items-center justify-content-center">
                 <img class="logo g-mb-30" src="/assets/custom_assets/img/logo.svg">
 
                 <input class="g-mb-20 d-block login__input" name="user_name" type="text" placeholder="Имя">
@@ -52,7 +52,7 @@
                 <button class="login__button g-mb-40">Войти</button>
 
                 <span class="text-center g-font-size-13 g-font-weight-300">Уведомление о том, чтобы не писали всякую фигню.</span>
-              </div>
+              </form>
             </div>
         </div>
       </div>
