--- a/zillion/index.html
+++ b/zillion/index.html
@@ -250,7 +250,7 @@
                                 </symbol>
                             </svg>
 
-                            <!-- <div class="bandito__body">
+                            <div class="bandito__body">
                                 <div class="bandito__col">
                                     <div class="bandito__item choseble">
                                         <svg><use xlink:href="#lamp"></use></svg>
@@ -1065,7 +1065,7 @@
                                         </svg>
                                     </div>
                                 </div>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                     <div class="about__content">
