--- a/zillion/index.html
+++ b/zillion/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zillion</title>
     <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/preloader.js" defer></script>
     <script src="./js/main.js" defer></script>
 </head>
 <body class="js-page-identifier" data-page="index">
@@ -217,7 +218,7 @@
             <div class="container">
                 <div class="about__container">
                     <div class="about__bandito-wrap">
-                        <div class="about__bandito bandito js-bandito">
+                        <div class="about__bandito bandito bandito_blocked js-bandito">
 
                             <svg display="none">
                                 <symbol id="lamp" viewBox="0 0 75 77">
