--- a/zillion/games.html
+++ b/zillion/games.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zillion</title>
     <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/preloader.js" defer></script>
     <script src="./js/main.js" defer></script>
 </head>
 <body class="body_white js-page-identifier" data-page="games">
