--- a/zillion/index.html
+++ b/zillion/index.html
@@ -9,6 +9,9 @@
     <script src="./js/main.js" defer></script>
 </head>
 <body class="js-page-identifier" data-page="index">
+    <div class="preloader">
+        <div class="preloader__loader"></div>
+    </div>
     <header class="header">
         <div class="container">
             <div class="header__wrap">
