--- a/4seasons/index.html
+++ b/4seasons/index.html
@@ -301,29 +301,23 @@
                 <div class="gallery__container">
                     <div class="gallery__col">
                         <picture class="gallery__img">
-                            <source srcset="" type="image/webp">
                             <img loading="lazy" src="./img/gallery-1.jpg" alt="Фото в галерее">
                         </picture>
                         <picture class="gallery__img">
-                            <source srcset="" type="image/webp">
                             <img loading="lazy" src="./img/gallery-2.jpg" alt="Фото в галерее">
                         </picture>
                         <picture class="gallery__img">
-                            <source srcset="" type="image/webp">
                             <img loading="lazy" src="./img/gallery-3.jpg" alt="Фото в галерее">
                         </picture>
                     </div>
                     <div class="gallery__col gallery__col_reverse">
                         <picture class="gallery__img">
-                            <source srcset="" type="image/webp">
                             <img loading="lazy" src="./img/gallery-4.jpg" alt="Фото в галерее">
                         </picture>
                         <picture class="gallery__img">
-                            <source srcset="" type="image/webp">
                             <img loading="lazy" src="./img/gallery-5.jpg" alt="Фото в галерее">
                         </picture>
                         <picture class="gallery__img">
-                            <source srcset="" type="image/webp">
                             <img loading="lazy" src="./img/gallery-6.jpg" alt="Фото в галерее">
                         </picture>
                     </div>
@@ -702,7 +696,7 @@
                 </label>
                 <label class="popup__label">
                     <span class="popup__label-text">Телефон</span>
-                    <input type="tel" class="popup__input" name="user_phone">
+                    <input type="tel" class="popup__input" name="user_phone" required>
                 </label>
                 <label class="popup__label">
                     <span class="popup__label-text">Электронная почта</span>
