--- a/zillion/index.html
+++ b/zillion/index.html
@@ -218,8 +218,8 @@
             <div class="container">
                 <div class="about__container">
                     <div class="about__bandito-wrap">
-                        <div class="about__bandito bandito  js-bandito">
-
+                        <div class="about__bandito bandito js-bandito"> 
+                            <!-- Что бы отключить анимацию, блоку bandito нужно присвоить класс bandito_blocked, тогда там будет статичная картинка-->
                             <svg display="none">
                                 <symbol id="lamp" viewBox="0 0 75 77">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M31 67C29.8954 67 29 67.8954 29 69C29 70.8695 30.2825 72.4394 32.0156 72.878C32.2076 75.1864 34.142 77 36.5 77H39.5C41.858 77 43.7924 75.1864 43.9843 72.878C45.7175 72.4394 47 70.8695 47 69C47 67.8954 46.1046 67 45 67H31Z"/>
