--- a/4seasons/index.html
+++ b/4seasons/index.html
@@ -63,7 +63,7 @@
             </picture>
             <div class="container">
                 <div class="hero__content">
-                    <h1 class="hero__title">Новогодняя ночь за городом в Прованс-отеле «4 сезона»</h1>
+                    <h1 class="hero__title">Новогодняя ночь за городом в Прованс-отеле «4&nbsp;сезона»</h1>
                     <p class="hero__subtitle">Проживание в отеле  - всё включено, волшебный Новогодний бал, подарки от деда Мороза, развлечения для всей семьи!</p>
                     <button class="button button_hero js-popup-open">Забронировать</button>
                 </div>
@@ -84,10 +84,10 @@
                 <div class="container">
                     <div class="about__body">
                         <h2 class="section__title">О нас</h2>
-                        <p class="about__text">Прованс-отель «4 сезона» - уютный загородный отель для спокойного отдыха в кругу друзей и семьи.</p>
+                        <p class="about__text">Прованс-отель «4&nbsp;сезона» - уютный загородный отель для спокойного отдыха в кругу друзей и семьи.</p>
                         <p class="about__text">У нас не много номеров и коттеджей - отель задуман так, чтобы каждый гость нашего отеля смог отдохнуть от городской суеты и посвятить время себе.</p>
                         <p class="about__text">На территории отеля вы найдете развлечения для себя и своей семьи: тайм-бар с бильярдом, кинотеатром, детской комнатой и настольными играми, а также настоящая баня, конный клуб, детские площадки.</p>
-                        <p class="about__text">В Прованс-отеле «4 сезона» вы можете насладиться прогулкой на природе, пожарить шашлыки, расслабиться - чего так не хватает в городе.</p>
+                        <p class="about__text">В Прованс-отеле «4&nbsp;сезона» вы можете насладиться прогулкой на природе, пожарить шашлыки, расслабиться - чего так не хватает в городе.</p>
                         <p class="about__text">В Новый год мы предлагаем вам специальную программу - 3 дня проживания - всё включено, новогодний бал с шоу программой и различные активности на свежем воздухе.</p>
                         <div class="about__socials">
                             <a href="https://www.facebook.com/club4s" target="_blank" class="about__link">
@@ -126,7 +126,7 @@
             </div>
         </section>
         <section class="benefits">
-            <h2 class="benefits__title">Новогодние каникулы в Прованс-отеле «4 сезона»</h2>
+            <h2 class="benefits__title">Новогодние каникулы в Прованс-отеле «4&nbsp;сезона»</h2>
             <div class="container">
                 <div class="benefits__container">
                     <article class="benefit">
@@ -176,7 +176,7 @@
                         </picture>
                         <div class="benefit__content">
                             <h3 class="benefit__title">Экскурсия на&nbsp;конюшню</h3>
-                            <p class="benefit__text">У вас будет уникальная возможность познакомиться с чудесными постоянными жителям Прованс-отеля «4 сезона» - лошадьми. Конный клуб подготовил для вас сюрприз - катание на лошадях в упряжке!</p>
+                            <p class="benefit__text">У вас будет уникальная возможность познакомиться с чудесными постоянными жителям Прованс-отеля «4&nbsp;сезона» - лошадьми. Конный клуб подготовил для вас сюрприз - катание на лошадях в упряжке!</p>
                         </div>
                     </article>
                 </div>
@@ -332,7 +332,7 @@
                     <a href="#main" class="logo js-scroll-link">
                         <img loading="lazy" src="./img/logo.svg" alt="Logo" class="logo__img">
                     </a>
-                    <h2 class="footer__title">Прованс-отель «4 сезона»</h2>
+                    <h2 class="footer__title">Прованс-отель «4&nbsp;сезона»</h2>
                     <div class="footer__contacts">
                         <a href="tel:+74992881598" class="footer__text">+7 499 288 15 98</a>
                         <a href="mailto:info@club4s.ru" class="footer__text">info@club4s.ru</a>
@@ -699,7 +699,7 @@
         <div class="popup js-order">
             <button class="button popup__close js-popup-close"></button>
             <div class="popup__head">
-                <h2 class="popup__title">Новогодняя ночь за городом в Прованс-отеле «4 сезона»</h2>
+                <h2 class="popup__title">Новогодняя ночь за городом в Прованс-отеле «4&nbsp;сезона»</h2>
             </div>
             <form class="popup__body js-form">
                 <label class="popup__label">
@@ -726,7 +726,7 @@
         <div class="popup js-thx">
             <button class="button popup__close js-popup-close"></button>
             <div class="popup__head">
-                <h2 class="popup__title">Новогодняя ночь за городом в Прованс-отеле «4 сезона»</h2>
+                <h2 class="popup__title">Новогодняя ночь за городом в Прованс-отеле «4&nbsp;сезона»</h2>
             </div>
             <div class="popup__body">
                 <span class="popup__label-text">Спасибо!</span>
@@ -737,7 +737,7 @@
         <div class="popup js-error">
             <button class="button popup__close js-popup-close"></button>
             <div class="popup__head">
-                <h2 class="popup__title">Новогодняя ночь за городом в Прованс-отеле «4 сезона»</h2>
+                <h2 class="popup__title">Новогодняя ночь за городом в Прованс-отеле «4&nbsp;сезона»</h2>
             </div>
             <div class="popup__body">
                 <span class="popup__label-text">Извините!</span>
