--- a/4seasons/index.html
+++ b/4seasons/index.html
@@ -303,22 +303,26 @@
                         <picture class="gallery__img">
                             <img loading="lazy" src="./img/gallery-1.jpg" alt="Фото в галерее">
                         </picture>
-                        <picture class="gallery__img">
-                            <img loading="lazy" src="./img/gallery-2.jpg" alt="Фото в галерее">
-                        </picture>
-                        <picture class="gallery__img">
-                            <img loading="lazy" src="./img/gallery-3.jpg" alt="Фото в галерее">
-                        </picture>
+                        <div class="gallery__row">
+                            <picture class="gallery__img">
+                                <img loading="lazy" src="./img/gallery-2.jpg" alt="Фото в галерее">
+                            </picture>
+                            <picture class="gallery__img">
+                                <img loading="lazy" src="./img/gallery-3.jpg" alt="Фото в галерее">
+                            </picture>
+                        </div>
                     </div>
                     <div class="gallery__col gallery__col_reverse">
+                        <div class="gallery__row">
+                            <picture class="gallery__img">
+                                <img loading="lazy" src="./img/gallery-5.jpg" alt="Фото в галерее">
+                            </picture>
+                            <picture class="gallery__img">
+                                <img loading="lazy" src="./img/gallery-6.jpg" alt="Фото в галерее">
+                            </picture>
+                        </div>
                         <picture class="gallery__img">
                             <img loading="lazy" src="./img/gallery-4.jpg" alt="Фото в галерее">
-                        </picture>
-                        <picture class="gallery__img">
-                            <img loading="lazy" src="./img/gallery-5.jpg" alt="Фото в галерее">
-                        </picture>
-                        <picture class="gallery__img">
-                            <img loading="lazy" src="./img/gallery-6.jpg" alt="Фото в галерее">
                         </picture>
                     </div>
                 </div>
