--- a/4seasons/index.html
+++ b/4seasons/index.html
@@ -180,6 +180,7 @@
                         </div>
                     </article>
                 </div>
+                <img class="benefits__deco" src="./img/deco.png" alt="Декор">
             </div>
         </section>
         <section id="rates" class="rates">
